--- a/templates/admin.html.twig
+++ b/templates/admin.html.twig
@@ -5,10 +5,7 @@
         <title>{% block title %}Welcome!{% endblock %}</title>
         {% block stylesheets %}{% endblock %}
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-        <script src="{{ asset('js/youtube.js') }}"></script>
-        <script src="{{ asset('js/ajax.js') }}"></script>
-        <script src="{{ asset('js/main.js') }}"></script>
-        <link rel="stylesheet" type="text/css" href="{{ asset('css/style.css') }}">
+        <link rel="stylesheet" type="text/css" href="{{ asset('css/admin.css') }}">
 
         <link href="https://fonts.googleapis.com/css?family=Lilita+One&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
