--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -7,6 +7,7 @@
     <div class="container">
         <h1>Liste des musiques</h1>
         <a class="buttonAdd" href="/admin/add" ><i class="fas fa-plus"></i> Ajouter une musique</a>
+        <h2>{{musiques | length }}  musiques</h2>
             <div class="musiquestitre">
                 <div>THEME</div>
                 <div>TITRE</div>
@@ -24,7 +25,7 @@
                     <div>
                         <a class="buttonSetting" href="/admin/modif/{{musique.id}}"><i class="fas fa-sliders-h"></i></a>
 
-                        <a class="buttonDelete" href="/admin/modif/{{musique.id}}"><i class="far fa-trash-alt"></i></a>
+                        <a class="buttonDelete" href="/admin/delete/{{musique.id}}"><i class="far fa-trash-alt"></i></a>
                     
                     </div>
                 
@@ -33,8 +34,6 @@
                 </div>
 
             {% endfor %}
-        
-
 
     </div>
 
