--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -77,6 +77,7 @@ body{
     width: 50%;
     background-color: #F5F5F5;
     overflow-Y: scroll;
+    height: 100%;
 }
 .container-titre h1{
     padding-left: 50px;
