petit message simpa

--- a/templates/admin/add.html.twig
+++ b/templates/admin/add.html.twig
@@ -70,6 +70,8 @@
     <div class="container-titre">
     <h1>Ajouter une musique</h1>
 
+    <h4 style="color:red;text-align:center">Avant d'ajouter, verifiez que votre musique n'existe pas deja<br>ctrl+F , pour la recherche</h4>
+
     <div class="dernier-titre" >Dernière musique ajoutée : <span class="spanderniertitre">titre</span></div>
 
             <div class="add-onetitre">
