--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -53,11 +53,16 @@
     
     </div>
 
+    <div id="pause" onclick="fairePause()"><div><i class="far fa-pause-circle"></i></div><br></div>
+    <span class="messagePause">La pause sera active à la fin de la musique</span>
+
     <div id="player"></div>
 
     <div id="compteur"></div>
 
     <div id="reponse"></div>
+
+    
 
     
     <a href="/admin" class="addMusique">Ajouter des musiques</a>
