--- a/templates/admin/modif.html.twig
+++ b/templates/admin/modif.html.twig
@@ -54,7 +54,7 @@
         </div>
 
         <div  class="divForm">
-            <h6>theme</h6>
+            <h6>Thème</h6>
             <select id="theme">
                 <option value="film" {% if info.theme == 'film' %} selected {% endif %}>Film</option>
                 <option value="musique" {% if info.theme == 'musique' %} selected {% endif %}>Musique</option>
@@ -62,7 +62,7 @@
         </div>
 
         <div id="sousCatMusique"  class="divForm">
-            <h6>Sous cathégorie</h6>
+            <h6>Sous catégorie</h6>
             <select id="SelectCatMusique">
                 <option value="autre">autre ...</option>
                 <option value="français">Français</option>
@@ -75,6 +75,8 @@
                 <option value="electro">Electro</option>
                 <option value="jazz">Jazz</option>
                 <option value="country">Country</option>
+                <option value="beauf">Beauf</option>
+                <option value="comedimusical">Comédie Musicale</option>
                 <option value="new wave">New wave</option>
             </select>
         </div>
