--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -291,3 +291,12 @@ body{
     font-size: 30px;
     cursor: pointer;
 }
+.messageError{
+    background-color: #CB4335;
+    color: white;
+    width: 100%;
+    height: 50px;
+    line-height: 50px;
+    font-size: 20px;
+    display: none;
+}
