--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,22 +1,31 @@
-body{
+
+html, body {
     margin: 0;
     padding: 0;
     font-family: 'Raleway', sans-serif;
-}
+    background-color: #02001A;
+    color : white;
+  }
+
 h1{
-    font-family: 'Lilita One', cursive;
+    font-family: 'Viga', sans-serif;
+}
+h1 span{
+    font-size: 20px;
+    font-family: 'Raleway', sans-serif;
+    color: #E88712 ;
 }
 h2{
-    font-family: 'Lilita One', cursive;
+    font-family: 'Viga', sans-serif;
 }
 h3{
-    font-family: 'Lilita One', cursive;
+    font-family: 'Viga', sans-serif;
 }
 h4{
-    font-family: 'Lilita One', cursive;
+    font-family: 'Viga', sans-serif;
 }
 h5{
-    font-family: 'Lilita One', cursive;
+    font-family: 'Viga', sans-serif;
     font-size: 30px;
     margin: 0;
 }
@@ -39,28 +48,52 @@ header{
     height: auto;
 }
 .button{
-    background-color: #1FA41C ;
+    display: block;
+    width: 400px;
+    text-align: center;
+    border-radius: 5px;
+    background-color: #2980B9 ;
     color: white;
-    padding: 10px 50px;
+    padding: 10px 10px;
+    margin: 0 auto;
     font-size: 30px;
     cursor: pointer;
+    transition: 0.5s;
+}
+.button:hover{
+    transition: 0.5s;
+    transform: scale(1.1);
+}
+.button:hover span{
+    padding-left: 30px;
+    transition: 0.5s;
+    opacity: 1;
+}
+.button span{
+    opacity: 0.5;
+    transition: 0.5s;
 }
 
 .formulaire{
     height: auto;
     width: 100%;
-    background-color: white;
-    box-shadow: 0px 5px 5px silver;
     display: flex;
     justify-content: center;
 }
 .boxForm{
+    text-align: left;
     border: solid 1px silver;
     border-radius: 10px;
     text-align: center;
     padding: 10px;
     margin: 10px;
-
+}
+.boxForm > div{
+    display: flex;
+    justify-content: space-around;
+}
+.boxForm > div{
+    text-align: left;
 }
 .annotation{
     color: grey;
@@ -68,12 +101,12 @@ header{
 }
 
 #compteur{
-    font-family: 'Lilita One', cursive;
+    font-family: 'Josefin Sans', sans-serif;
     text-align: center;
-    font-size: 80px;
+    font-size: 120px;
 }
 #reponse{
-    font-family: 'Lilita One', cursive;
+    font-family: 'Viga', sans-serif;
     text-align: center;
 }
 #reponse span{
@@ -85,7 +118,7 @@ header{
 
 .titre{
     font-size: 50px;
-    color: #1A5276;
+    color: #E88712;
 }
 .addMusique{
     position: absolute;
@@ -98,6 +131,7 @@ header{
 
 }
 #pause{
+    margin-top: 20px;
     display: none;
     /*display: flex;*/
     justify-content: center;
@@ -106,6 +140,7 @@ header{
 }
 #pause > div{
     background-color: white;
+    color: black;
     width: 40px;
     height: 40px;
     text-align: center;
